2001-01-15  Sven Wischnowsky  <wischnow@zsh.org>

	* Ulrik Haugen: 13344, 13347: Completion/User/_grep,
	Completion/User/_ls, Completion/User/_use_lo: add completion for
	ls and ([ef]|)grep
	
	* 13346: Completion/Bsd/_bsd_pkg, Completion/Bsd/_kld,
 	Completion/Core/_compalso, Completion/Core/_complete,
 	Completion/Core/_normal, Completion/Core/compdump,
 	Completion/Core/compinit, Completion/Debian/_apt,
 	Completion/Debian/_bug, Completion/Debian/_dpkg,
 	Completion/User/_bzip2, Completion/User/_chown,
 	Completion/User/_compress, Completion/User/_dvi,
 	Completion/User/_gzip, Completion/User/_imagemagick,
 	Completion/User/_ispell, Completion/User/_java,
 	Completion/User/_lp, Completion/User/_make,
 	Completion/User/_mount, Completion/User/_mysql_utils,
 	Completion/User/_pack, Completion/User/_pbm,
 	Completion/User/_psutils, Completion/User/_rcs,
 	Completion/User/_rlogin, Completion/User/_ssh,
 	Completion/User/_tiff, Completion/User/_yp, Completion/X/_xutils,
 	Doc/Zsh/compsys.yo: add `services', allowing easier re-use of
 	(parts of) completion functions (see also: 12977)
	
2001-01-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 13343: Src/Zle/compmatch.c, Src/Zle/compresult.c: fix for 13339
 	(report each position only once) and fixlet for matching: a case
 	where missing characters weren't remembered
	
2001-01-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 13339: Doc/Zsh/compwid.yo, Doc/Zsh/contrib.yo,
 	Functions/Zle/cycle-completion-positions, Src/Zle/comp.h,
 	Src/Zle/complete.c, Src/Zle/compresult.c: add
 	unambiguous_positions and insert_positions keys to $compstate; use
 	them in the new cycle-completion-positions shell function widget

2001-01-10  Geoff Wing  <gcw@zsh.org>

	* unposted: Etc/MACHINES: format leading spaces to tabs

2001-01-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 13336: Src/Zle/compmatch.c, Src/Zle/compresult.c,
 	Test/54compmatch.ztst: fix cursor positioning with partial-word
 	match specs using `**'
	